[NAE-2092] User and Auth endpoints refactor
- updated PetriNetService with correct PetriNet object mapping from mongo